--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,20 @@
 cmake_minimum_required( VERSION 3.15 )
 project( NotTooSmartPointers )
 
+option( NTSP_BUILD_SAMPLES "Build NTSP tests" ON )
+option( NTSP_BUILD_SAMPLES "Build NTSP examples" ON )
+
 set( CMAKE_CXX_STANDARD 20 )
 set( CMAKE_CXX_STANDARD_REQUIRED ON )
+
+include( GNUInstallDirs )
+set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}" )
+set( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}" )
+set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}" )
+
+if( CMAKE_CXX_COMPILER_ID MATCHES GNU )
+	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fprofile-arcs -ftest-coverage" )
+endif()
 
 if( EXISTS "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake" )
 	include( "${CMAKE_BINARY_DIR}/conanbuildinfo.cmake" )
@@ -12,7 +24,3 @@ else()
 endif()
 
 add_subdirectory( src )
-
-add_executable( NtspSample main.cpp )
-add_dependencies( NtspSample ntsp )
-target_link_libraries( NtspSample ntsp )
